# code-teaching-video-agent

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt  setup.py
docs/: CodeVizTeach-Original.md
scripts/: audio_driven_scene.py  pipeline.py  subtitle_generator.py  timeline_planner.py  tts_generator.py  video_composer.py
